# webgpu-cross-platform-demo

./: .gitattributes  .gitignore  .gitmodules  .gitpod.yml  CMakeLists.txt  README.md  TODO  build_all.sh  build_helper.sh  build_web_many_configs.sh  build_webdbg-sanitizers.sh  build_webdbg.sh  build_webdbg4gb-sanitizers.sh  build_webdbg4gb.sh  build_webdbg4gbbigint.sh  build_webdbg64-sanitizers.sh  build_webdbg64.sh  build_webdbgbigint.sh  build_webrel-sanitizers.sh  build_webrel.sh  build_webrel4gb-sanitizers.sh  build_webrel4gb.sh  build_webrel64-sanitizers.sh  build_webrel64.sh  index.html  main.cpp  package.json  setup.sh  setup_build.sh  setup_native_build.sh  vcpkg.json  window.h  window_macos.mm
cmake/modules/: Findglfw3.cmake
dawn_gen_snapshots/: library_webgpu_enum_tables.js  library_webgpu_generated_sig_info.js  library_webgpu_generated_struct_info.js  webgpu.h  webgpu_cpp.h
emdawnwebgpu_pkg/: README.md  emdawnwebgpu.port.py  emdawnwebgpu_cpp.port.py
emdawnwebgpu_pkg/webgpu/include/webgpu/: webgpu.h
emdawnwebgpu_pkg/webgpu/src/: library_webgpu.js  library_webgpu_enum_tables.js  library_webgpu_generated_sig_info.js  library_webgpu_generated_struct_info.js  webgpu.cpp
emdawnwebgpu_pkg/webgpu_cpp/include/dawn/: webgpu_cpp_print.h
emdawnwebgpu_pkg/webgpu_cpp/include/webgpu/: webgpu_cpp.h
emdawnwebgpu_pkg_snapshot/: CMakeLists.txt  README.txt  library_webgpu.js  library_webgpu_enum_tables.js  library_webgpu_generated_sig_info.js  library_webgpu_generated_struct_info.js  port.py  webgpu.cpp  webgpu_generated_struct_info32.json  webgpu_generated_struct_info64.json
emdawnwebgpu_pkg_snapshot/include/dawn/: webgpu_cpp_print.h
emdawnwebgpu_pkg_snapshot/include/webgpu/: webgpu.h  webgpu_cpp.h
emdawnwebgpu_pkg_snapshot/include_c/webgpu/: webgpu.h
emdawnwebgpu_pkg_snapshot/include_cpp/dawn/: webgpu_cpp_print.h
emdawnwebgpu_pkg_snapshot/include_cpp/webgpu/: webgpu_cpp.h
emdawnwebgpu_pkg_snapshot/src/: library_webgpu_enum_tables.js
shaders/: a.frag  a.frag.spv  a.vert  a.vert.spv
